--- a/blueprints/automation/perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+++ b/blueprints/automation/perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
@@ -1,7 +1,7 @@
 blueprint:
-  name: Reduce volume of a media player when a voice assistant is listening (v2)
+  name: Reduce volume of a media player when a voice assistant is listening
   description: |
-    Reduce the volume of a media player based on the state of a voice assistant
+    Temporarily reduce the volume of every `media_player` in the same area as the voice assistant when a command is in progress. The automation will automatically skips `media_player` that are `off` or in `standby`.
   domain: automation
   author: JLo
   input:
@@ -18,15 +18,9 @@ blueprint:
       description: Advanced settings of the blueprint
       collapsed: true
       input:
-        target_all_playing_players:
-          name: Target all playing players
-          description: By default, the blueprint targets all `media_player` in the `playing` state in the same area of the input `assist_satellite` entity, you can turn off this behaviour here.
-          default: true
-          selector:
-            boolean:
         additional_target:
           name: Additional target
-          description: Additional target (for exmaple if you want to also target nearby areas). The automation will automatically skips `media_player` that are off.
+          description: Additional target (for exmaple if you want to also target nearby areas). The automation will automatically skips `media_player` that are `off` or in `standby`.
           default: {}
           selector:
             target:
@@ -41,26 +35,60 @@ triggers:
 actions:
   - variables:
       assist_satellite_entity: !input assist_satellite_entity
-      target_all_playing_players: !input target_all_playing_players
       additional_target: !input additional_target
+      voice_assistant_players: |
+        {{ expand(device_entities(device_id(assist_satellite_entity))) |
+            selectattr('domain', 'eq', 'media_player') | 
+            map(attribute='entity_id') | 
+            unique | 
+            list
+        }}
       default_target_media_players: |
-        {% set playing_media_players = expand(area_entities(area_id(assist_satellite_entity)) ) | selectattr('domain', 'eq', 'media_player') | selectattr('state', 'eq', 'playing') | map(attribute='entity_id') | unique | list %}
-        {{ playing_media_players if target_all_playing_players else [] }}
+        {% set playing_media_players = expand(
+          area_entities(area_id(assist_satellite_entity)) ) | 
+          selectattr('domain', 'eq', 'media_player') | 
+          rejectattr('state', 'eq', 'off') | 
+          rejectattr('state', 'eq', 'standby')  | 
+          rejectattr('entity_id', 'in', voice_assistant_players)  | 
+          map(attribute='entity_id') | 
+          unique | 
+          list
+        %}
+
+        {{playing_media_players}}
       additional_target_media_players: |
         {% set area_ids = [additional_target.area_id] if additional_target.area_id is string else additional_target.area_id | default([]) %}
         {% set device_ids = [additional_target.device_id] if additional_target.device_id is string else additional_target.device_id | default([]) %}
         {% set entity_ids = [additional_target.entity_id] if additional_target.entity_id is string else additional_target.entity_id | default([]) %}
 
-        {% set area_entities = expand(area_ids | map('area_entities') | list | sum(start=[])) %}
-        {% set device_entities = expand(device_ids | map('device_entities') | list | sum(start=[])) %}
+        {% set area_entities = expand(
+          area_ids | 
+          map('area_entities') | 
+          list) 
+        %}
+        {% set device_entities = expand(
+          device_ids | 
+          map('device_entities') | 
+          list) 
+        %}
         {% set entity_entities = expand(entity_ids) %}
 
         {% set all_entities = area_entities + device_entities + entity_entities %}
-        {% set additional_players = all_entities | selectattr('domain', 'eq', 'media_player') | rejectattr('state', 'eq', 'off')  | map(attribute='entity_id') | unique | list %}
 
-        {{additional_players}}
+        {% set additional_players = 
+          all_entities | 
+          selectattr('domain', 'eq', 'media_player') | 
+          rejectattr('state', 'eq', 'off')  | 
+          rejectattr('state', 'eq', 'standby') | 
+          rejectattr('entity_id', 'in', voice_assistant_players)  | 
+          map(attribute='entity_id') | 
+          unique | 
+          list 
+        %}
+
+        {{ additional_players}}
       final_target: |
-        {{default_target_media_players + additional_target_media_players }}
+        {{ (default_target_media_players + additional_target_media_players) | unique | list }}
       scene_previous_volume: |
         [
           {% for player in final_target %}
