--- a/automations.yaml
+++ b/automations.yaml
@@ -700,11 +700,10 @@
     ouvertes "
   description: ''
   triggers:
-  - entity_id:
-    - binary_sensor.is_raining_now
-    from: 'off'
-    to: 'on'
-    trigger: state
+  - trigger: numeric_state
+    entity_id:
+    - sensor.wittboy_rain_rate_piezo
+    above: 0
   conditions:
   - condition: state
     entity_id: input_boolean.automation_monitor_home
@@ -1875,9 +1874,11 @@
     trigger: conversation
   conditions: []
   actions:
-  - action: script.start_marilou_bedtime_routine
+  - action: script.turn_on
     metadata: {}
     data: {}
+    target:
+      entity_id: script.start_marilou_bedtime_routine
   - set_conversation_response: D'accord
   mode: single
 - id: '1707728356919'
@@ -2037,34 +2038,6 @@
   - set_conversation_response: '{{response_1.response.speech.plain.speech}} and {{response_2.response.speech.plain.speech}}'
   mode: parallel
   max: 100
-- id: '1713855798081'
-  alias: "Assist - \U0001F4E3 Éteindre temporairement un assistant vocal"
-  description: ''
-  triggers:
-  - command:
-    - Tais-toi
-    - Ta gueule
-    - Chut
-    - Silence
-    trigger: conversation
-  conditions: []
-  actions:
-  - if:
-    - condition: template
-      value_template: '{{ trigger.device_id != None}}'
-      enabled: true
-    then:
-    - action: script.turn_on
-      metadata: {}
-      data:
-        variables:
-          device: '{{trigger.device_id}}'
-      target:
-        entity_id: script.eteindre_temporairement_un_assistant_vocal
-    - set_conversation_response: D'accord
-    else:
-    - set_conversation_response: Cette commande ne fonctionne pas depuis cet appareil
-  mode: single
 - id: '1714134719761'
   alias: "Assist - \U0001F4E3 Réinitialiser la lumière"
   description: ''
@@ -2392,36 +2365,6 @@
       entity_id: input_boolean.jl_connected_to_tesla
   mode: queued
   max: 10
-- id: '1719820004780'
-  alias: Réduire volume lorsque assistant vocal en écoute (Bureau)
-  description: ''
-  use_blueprint:
-    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
-    input:
-      assist_in_progress_binary_sensor: binary_sensor.vpe_bureau_assist_en_cours_2
-      media_player: media_player.sonos_bureau_music_assistant
-      threshold_volume: 0.2
-      listening_volume: 0.1
-- id: '1719820593325'
-  alias: Réduire volume lorsque assistant vocal en écoute (Chambre Marilou)
-  description: ''
-  use_blueprint:
-    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
-    input:
-      assist_in_progress_binary_sensor: binary_sensor.vpe_chambre_marilou_assist_en_cours_2
-      media_player: media_player.sonos_chambre_marilou
-      threshold_volume: 0.2
-      listening_volume: 0.1
-- id: '1719820718219'
-  alias: Réduire volume lorsque assistant vocal en écoute (Salon)
-  description: ''
-  use_blueprint:
-    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
-    input:
-      assist_in_progress_binary_sensor: binary_sensor.vpe_salon_assist_en_cours_2
-      media_player: media_player.kef_salon_music_assistant
-      listening_volume: 0.3
-      threshold_volume: 0.4
 - id: '1721160666723'
   alias: Télécommande Table Basse
   description: ''
@@ -3235,7 +3178,7 @@
       - binary_sensor.capteur_ouverture_porte_entree
       - binary_sensor.capteur_ouverture_porte_fenetre_salon
       room_openings_duration: 00:05:00
-      outside_temperature: sensor.floirac_temperature
+      outside_temperature: sensor.wittboy_outdoor_temperature
       power_notification_script: script.power_notification_temperature_anormale_dans_le_salon
 - id: '1726663270597'
   alias: "Chauffage intelligent - \U0001F6CE️ Notifier Température anormale Chambre"
@@ -3248,7 +3191,7 @@
       room_openings:
       - binary_sensor.capteur_ouverture_fenetre_chambre
       room_openings_duration: 00:05:00
-      outside_temperature: sensor.floirac_temperature
+      outside_temperature: sensor.wittboy_outdoor_temperature
       power_notification_script: script.power_notification_temperature_anormale_dans_la_chambre
 - id: '1726663301942'
   alias: "Chauffage intelligent - \U0001F6CE️ Notifier Température anormale Chambre
@@ -3262,7 +3205,7 @@
       room_openings:
       - binary_sensor.capteur_ouverture_fenetre_chambre_bebe
       room_openings_duration: 00:05:00
-      outside_temperature: sensor.floirac_temperature
+      outside_temperature: sensor.wittboy_outdoor_temperature
       power_notification_script: script.power_notification_temperature_anormale_dans_la_chambre_de_marilou
 - id: '1726663330892'
   alias: "Chauffage intelligent - \U0001F6CE️ Notifier Température anormale Bureau"
@@ -3275,7 +3218,7 @@
       room_openings:
       - binary_sensor.capteur_ouverture_fenetre_bureau
       room_openings_duration: 00:05:00
-      outside_temperature: sensor.floirac_temperature
+      outside_temperature: sensor.wittboy_outdoor_temperature
       power_notification_script: script.power_notification_temperature_anormale_dans_le_bureau
 - id: '1726666291089'
   alias: Pulse - Allumer / Éteindre
@@ -3540,6 +3483,16 @@
     entity_id: input_select.modes_de_presence_de_la_maison_v2
     state: Départ en cours
   actions:
+  - wait_for_trigger:
+    - trigger: state
+      entity_id:
+      - binary_sensor.capteur_ouverture_porte_entree
+      to: 'off'
+    timeout:
+      hours: 0
+      minutes: 1
+      seconds: 0
+      milliseconds: 0
   - action: input_select.select_option
     metadata: {}
     data:
@@ -3567,7 +3520,7 @@
       to: 'off'
     timeout:
       hours: 0
-      minutes: 15
+      minutes: 1
       seconds: 0
       milliseconds: 0
   - action: input_select.select_option
@@ -4899,16 +4852,6 @@
       target:
         entity_id: media_player.vpe_chambre_media_player
   mode: single
-- id: '1730928352543'
-  alias: Réduire volume lorsque assistant vocal en écoute (Cuisine)
-  description: ''
-  use_blueprint:
-    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
-    input:
-      assist_in_progress_binary_sensor: binary_sensor.vpe_cuisine_assist_en_cours_2
-      media_player: media_player.kef_salon_music_assistant
-      listening_volume: 0.3
-      threshold_volume: 0.4
 - id: '1731176393383'
   alias: VPE Chambre - Allumer / Éteindre automatiquement
   description: ''
@@ -5062,3 +5005,38 @@
         entity_id:
         - switch.vpe_bureau_microphone
   mode: single
+- id: '1731706815901'
+  alias: Réduire volume lorsque assistant vocal en écoute (Bureau)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+    input:
+      assist_satellite_entity: assist_satellite.vpe_bureau_satellite_assist
+- id: '1731706831270'
+  alias: Réduire volume lorsque assistant vocal en écoute (Chambre Marilou)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+    input:
+      assist_satellite_entity: assist_satellite.vpe_chambre_marilou_satellite_assist
+- id: '1731706869047'
+  alias: Réduire volume lorsque assistant vocal en écoute (Chambre)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+    input:
+      assist_satellite_entity: assist_satellite.vpe_chambre_satellite_assist
+- id: '1731706885951'
+  alias: Réduire volume lorsque assistant vocal en écoute (Cuisine)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+    input:
+      assist_satellite_entity: assist_satellite.vpe_cuisine_satellite_assist
+- id: '1731706904863'
+  alias: Réduire volume lorsque assistant vocal en écoute (Salon)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+    input:
+      assist_satellite_entity: assist_satellite.vpe_salon_satellite_assist
