--- a/custom_sentences/fr/short_response.yaml
+++ b/custom_sentences/fr/short_response.yaml
@@ -39,6 +39,8 @@ responses:
       default: "D'accord"
     HassMediaNext:
       default: "D'accord"
+    HassMediaPrevious:
+      default: "D'accord"
     HassSetVolume:
       default: "D'accord"
 
